TT-304: Add documentation for using the example files
Authors: @richardtowers @georgievh

--- a/apache/shib.conf
+++ b/apache/shib.conf
@@ -1,31 +1,8 @@
-#
-# Unless explicitly acquired and licensed from Licensor under another license, the contents of
-# this file are subject to the Reciprocal Public License ("RPL") Version 1.5, or subsequent
-# versions as allowed by the RPL, and You may not copy or use this file in either source code
-# or executable form, except in compliance with the terms and conditions of the RPL
-#
-# All software distributed under the RPL is provided strictly on an "AS IS" basis, WITHOUT
-# WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, AND LICENSOR HEREBY DISCLAIMS ALL SUCH
-# WARRANTIES, INCLUDING WITHOUT LIMITATION, ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
-# PARTICULAR PURPOSE, QUIET ENJOYMENT, OR NON-INFRINGEMENT. See the RPL for specific language
-# governing rights and limitations under the RPL.
-#
-# http://opensource.org/licenses/RPL-1.5
-#
-# Copyright 2012-2016 Open Justice Broker Consortium
-#
-
 # https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPApacheConfig
 
-# RPM installations on platforms with a conf.d directory will
-# result in this file being copied into that directory for you
-# and preserved across upgrades.
-
-# For non-RPM installs, you should copy the relevant contents of
-# this file to a configuration location you control.
-
 #
-# Load the Shibboleth module.
+# Load the Shibboleth module
+# (Note: this path will depend on the location of your shibboleth installation)
 #
 LoadModule mod_shib /usr/local/opt/shibboleth-sp/lib/shibboleth/mod_shib_24.so
 
@@ -46,6 +23,7 @@ Require all granted
 
 #
 # Used for example style sheet in error templates.
+# If you're not using shibboleth's error page / css you can remove this section.
 #
 <IfModule mod_alias.c>
 <Location /shibboleth-sp>
@@ -56,7 +34,9 @@ Alias /shibboleth-sp/main.css /opt/shibboleth-sp/share/shibboleth/main.css
 </IfModule>
 
 #
-# Configure the module for content.
+# Configure the /secure path to require a shibboleth session.
+#
+# Unauthenticated users that visit /secure will be redirected to Verify.
 #
 # You MUST enable AuthType shibboleth for the module to process
 # any requests, and there MUST be a require command as well. To
